# jaeho_template

./: .gitignore  README.md  packages.txt  pyproject.toml  requirements.txt  requirements2.txt  requirements_minimal.txt  requirements_streamlit.txt  requirements_venv_docling.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml  read_me  secrets.toml
LangGraph_repeat_practice/: 01-Github-Code-QA-RAG.ipynb  01.Agent_simulation.ipynb  02.CRAG.ipynb  03.Self-RAG.ipynb  08-LangGraph-Multi-Agent-Supervisor.ipynb  base.ipynb  create_anlyst.ipynb  create_vectorstore.ipynb  fast_api.py  langchain_api.py
LangGraph_repeat_practice/FAISS_SAJU/: index.faiss  index.pkl
LangGraph_repeat_practice/FAISS_SPRI_202312/: index.faiss  index.pkl
LangGraph_repeat_practice/data/: The-Four-Pillars-of-Destiny-Understanding-Character-Relationships-and-Potential-through-Chinese-Astrology.md
LangGraph_repeat_practice/rag/: pdf.py
RAG_Template/: 00.Docling.ipynb  01.indexing.ipynb  02.LangGraph_qa.ipynb  03.Modules.ipynb  fast_main.py  fastapi_server copy.py  fastapi_server.py  nodes.py  states.py  stream_main.py  streamlit_wrapper.py  utils.py
RAG_Template/RAG/: rag copy.py  rag.py
RAG_Template/conversation_data/: batch_conversation_20250901_220941.json  batch_conversation_20250901_221553.json  batch_conversation_20250901_224248.json  batch_conversation_20250901_232724.json  batch_conversation_20250902_023051.json  batch_conversation_20250902_025932.json  batch_conversation_20250902_031346.json  batch_conversation_20250902_033907.json  batch_conversation_20250902_033938.json  conversation_20250902_034517.json  conversation_20250902_034525.json  thread_12c2b66d-220b-4ea3-ba29-c31aede63bac.json  thread_1897df57-2b8b-4a84-8afb-357fa66acfd0.json  thread_678142ee_20250902_035337.json
RAG_Template/docling_outputs/: LangGraph-Based Integrated Architecture for CrewAI Multi-Agent.pdf.md  docling.json  insight_Agentic.pdf.md
RAG_Template/feedback_data/: feedback_20250901_221007.json  (+1 more)
RAG_strategies/: 00.Docling_individual _file.ipynb  00.Docling_multi_file.ipynb  01.indexing.ipynb  02.retriever.ipynb
langchain-langgraph-code-qa/: 01.indexing.ipynb  02.LangGraph_qa.ipynb  03.Modules.ipynb  README_FastAPI.md  chains.py  main.py  nodes.py  rag.py  requirements_fastapi.txt  retrievers.py  run_fastapi_server.py  state.py  streamlit_wrapper.py  tools.py
perplex/: main.py
(+7480 files in other folders)
